@@ -243,8 +243,7 @@ test_log_msg_features (const ACE_TCHAR *program)
   big[ACE_Log_Record::MAXLOGMSGLEN] = ACE_TEXT ('\0');
   ACE_DEBUG ((LM_INFO, ACE_TEXT ("This is too big: %s\n"), big));
 
-  ACE_DEBUG ((LM_INFO, ACE_TEXT ("******\n")));
-  ACE_HEX_DUMP((LM_INFO, big, ACE_Log_Record::MAXLOGMSGLEN ));
+  ACE_HEX_DUMP((LM_INFO, (const char*)big, ACE_Log_Record::MAXLOGMSGLEN ));
 
   // Exercise many different combinations of OSTREAM.
 
