@@ -1,3 +1,12 @@
+Fri Apr 12 19:30:05 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>
+
+        * ace/Log_Category.h:
+        * ace/Log_Category.cpp:
+        Fixed problem for ST build
+
+        * tests/Log_Msg_Test.cpp:
+        Fixed problem for WCHAR build
+
 Thu Apr 11 19:53:22 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>
 
         * ace/Log_Category.h:
